--- a/src/components/section/About.astro
+++ b/src/components/section/About.astro
@@ -34,9 +34,9 @@ const displayDesc =
         {
           statistics.map((stat) => (
             <div class='flex flex-col space-y-2 p-6 md:p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300'>
-              <h3 class='text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-blue-600 to-indigo-600'>
+              <p class='text-4xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-blue-600 to-indigo-600'>
                 {stat.value}
-              </h3>
+              </p>
               <p class='text-sm md:text-base text-slate-600 font-medium leading-snug'>
                 {stat.label?.[lang]}
               </p>
