--- a/src/pages/en/blog/index.astro
+++ b/src/pages/en/blog/index.astro
@@ -37,9 +37,9 @@ if (posts.length > 0) {
 }
 
 // Static Text
-const pageTitle = "Today's Headlines:\nStay Informed";
+const pageTitle = 'The Hub for Digital Insights\n&Business Growth';
 const pageDesc =
-  'Explore the latest news from around the world. We bring you up-to-the-minute updates on the most significant events, trends, and stories. Discover the world through our coverage.';
+  'Discover advanced conversion tactics, SEO fundamentals, and the power of modern web technology. We share proven, actionable strategies to help you dominate your market and multiply your revenue.';
 ---
 
 <BaseLayout
