fix: fix GTM Pricing

--- a/src/components/section/Pricing.astro
+++ b/src/components/section/Pricing.astro
@@ -88,7 +88,7 @@ const processedPackages: PricingPackage[] = rawPackages.map((pkg: any) => {
             {leftCardTitle}
           </h3>
           <a
-            onclick="window.dataLayer = window.dataLayer || []; window.dataLayer.push({ 'event': 'click_cta', 'Button_Pricing_CTA': 'Pricing_CTAMeeting' });"
+            onclick="window.dataLayer = window.dataLayer || []; window.dataLayer.push({ 'event': 'click_cta_pricing', 'Button_Pricing_CTA': 'Pricing_CTAMeeting' });"
             href={leftWaLink}
             target='_blank'
             rel='noopener noreferrer'>
